add equilateral graph

--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/chart.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/chart.html
@@ -67,30 +67,47 @@
   var selectedOption = document.querySelector(
     '.radio-group input[name="option"]:checked'
   ).value;
-
-  var selected_type;
-  if ((selectedOption = 1)) {
-    selected_type = "Rectangle";
-  } else {
-    selected_type = "Equilateral";
-  }
-  console.log(selected_type);
-
   x = [0, 1, 0, 0];
   y = [0, 0, 1, 0];
-  baseTriangle = [
-    { x: 0, y: 0 },
-    { x: 1, y: 0 },
-    { x: 0, y: 1 },
-    { x: 0, y: 0 },
-  ];
 
-  baseTriangleEquilateral = [
-    { x: 0, y: 0 },
-    { x: 1, y: 0 },
-    { x: 1 / 2, y: Math.sqrt(3) / 2 },
-    { x: 0, y: 0 },
-  ];
+  var selected_type;
+  if (selectedOption == 1) {
+    selected_type = "Rectangle";
+    baseTriangle = [
+      { x: 0, y: 0 },
+      { x: 1, y: 0 },
+      { x: 0, y: 1 },
+      { x: 0, y: 0 },
+    ];
+    function createXYValues(x, y, t) {
+      xyValues = [];
+      for (var i = 0; i < x.length; i++) {
+        xyValues.push({ x: x[i], y: y[i], t: t[i] });
+      }
+      return xyValues;
+    }
+  } else {
+    selected_type = "Equilateral";
+    baseTriangle = [
+      { x: 0, y: 0 },
+      { x: 1, y: 0 },
+      { x: 1 / 2, y: Math.sqrt(3) / 2 },
+      { x: 0, y: 0 },
+    ];
+    function createXYValues(x, y, t) {
+      xyValues = [];
+      pos = "inside";
+      for (var i = 0; i < x.length; i++) {
+        xyValues.push({
+          x: x[i] + y[i] / 2,
+          y: (y[i] * Math.sqrt(3)) / 2,
+          t: t[i],
+        });
+      }
+      return xyValues;
+    }
+  }
+  console.log(selected_type);
 
   datasets = [
     {
@@ -101,15 +118,6 @@
       legend: false,
     },
   ];
-
-  function createXYValues(x, y, t) {
-    xyValues = [];
-    pos = "inside";
-    for (var i = 0; i < x.length; i++) {
-      xyValues.push({ x: x[i], y: y[i], t: t[i] });
-    }
-    return xyValues;
-  }
 
   function addPrefixToCurves(curves) {
     for (let i = 0; i < curves.length; i++) {
@@ -144,18 +152,34 @@
       point_azeotrope = [];
       intersection = curve_list[i]["azeo"];
       if (intersection[0] == true) {
-        point_azeotrope.push({
-          x: curve_list[i]["x1"][0],
-          y: curve_list[i]["x2"][0],
-        });
+        if (selectedOption == 1) {
+          point_azeotrope.push({
+            x: curve_list[i]["x1"][0],
+            y: curve_list[i]["x2"][0],
+          });
+        } else {
+          point_azeotrope.push({
+            x: curve_list[i]["x1"][0] + curve_list[i]["x2"][0] / 2,
+            y: (curve_list[i]["x2"][0] * Math.sqrt(3)) / 2,
+          });
+        }
       }
 
       if (intersection[-1] == true) {
         length = curve_list[i]["x1"].length;
-        point_azeotrope.push({
-          x: curve_list[i]["x1"][length - 1],
-          y: curve_list[i]["x2"][length - 1],
-        });
+        if (selectedOption == 1) {
+          point_azeotrope.push({
+            x: curve_list[i]["x1"][length - 1],
+            y: curve_list[i]["x2"][length - 1],
+          });
+        } else {
+          point_azeotrope.push({
+            x:
+              curve_list[i]["x1"][length - 1] +
+              curve_list[i]["x2"][length - 1] / 2,
+            y: (curve_list[i]["x2"][length - 1] * Math.sqrt(3)) / 2,
+          });
+        }
       }
       datasets.push({
         data: point_azeotrope,
