--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/chart.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/chart.html
@@ -64,9 +64,29 @@
 
   const ctx = document.querySelector(".chartCanvas");
 
-  var selectedOption = document.querySelector(
-    '.radio-group input[name="option"]:checked'
-  ).value;
+  const option1 = document.querySelector("#option1");
+  const option2 = document.querySelector("#option2");
+
+  // Check if a value is stored in localStorage
+  let storedOption = localStorage.getItem("selectedOption");
+
+  // Set the default checked radio button based on the stored value, or default to option1 if nothing is stored
+  option1.checked = storedOption === "2" ? false : true;
+  option2.checked = storedOption === "2" ? true : false;
+
+  // Set the initial selected option based on the stored value, or default to option1 if nothing is stored
+  let selectedOption = storedOption || option1.value;
+
+  // Add event listener to each radio button
+  option1.addEventListener("click", function () {
+    selectedOption = option1.value;
+    localStorage.setItem("selectedOption", selectedOption);
+  });
+
+  option2.addEventListener("click", function () {
+    selectedOption = option2.value;
+    localStorage.setItem("selectedOption", selectedOption);
+  });
   x = [0, 1, 0, 0];
   y = [0, 0, 1, 0];
 
