--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
@@ -83,10 +83,16 @@ Home {%endblock%} {% block head %}
       </div>
 
       <div class="radio-group" style="margin-bottom: 20px">
-        <input type="radio" name="option" id="option1" value="1" checked />
+        <input
+          type="radio"
+          name="option"
+          id="option1"
+          value="Rectangle"
+          checked
+        />
         <label for="option1">Rectangle</label>
 
-        <input type="radio" name="option" id="option2" value="2" />
+        <input type="radio" name="option" id="option2" value="Equilateral" />
         <label for="option2">Equilateral</label>
       </div>
 
