deleted points from curves

--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/chart.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/chart.html
@@ -76,6 +76,7 @@
         showLine: true,
         borderColor: colors[i],
         backgroundColor: colors[i],
+        pointRadius: 0,
       });
     }
 
