--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
@@ -219,7 +219,7 @@ Home {%endblock%} {% block head %}
     </div>
 
     <div class="tooltip-container" style="display: none" id="nrtl">
-      PS: A is propotional to gamma :
+      PS: A is propotional to tau :
       <br />
       <img src="{% static 'img/nrtl_equation.png' %}" />
     </div>
