--- a/backend_django/static/css/index.css
+++ b/backend_django/static/css/index.css
@@ -17,7 +17,22 @@ h1 {
 
 body {
   background-color: hsl(0, 0%, 98%);
+  zoom: 0.9;
 }
+
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  margin-bottom: 5px;
+  font-size: small;
+}
+
+#index-content {
+  margin-bottom: 20px;
+}
+
 
 .component {
   margin-top: 20px;
