enlever les points du graph

--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/chart.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/chart.html
@@ -74,6 +74,7 @@
 
       datasets.push({
         data: xyValues,
+        pointRadius: 1,
         showLine: true,
         borderColor: colors[i],
         backgroundColor: colors[i],
