now all icons are displayed

--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/menu.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/menu.html
@@ -20,4 +20,5 @@
     </svg>
   </div>
   <div id="content">{%include "ternary_azeotrope/tables.html" %}</div>
+  <i class="fa-sharp fa-solid fa-ban"></i>
 </nav>
