--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/tables.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/tables.html
@@ -30,70 +30,75 @@
           </tr>
         </thead>
         <tbody>
-        {% for element in components %}
-        <tr id="component-row{{ forloop.counter }}">
-          <td noneditable="true">{{ element.id }}</td>
-          <td editable="false">{{ element.name }}</td>
-          <td editable="false">{{ element.a }}</td>
-          <td editable="false">{{ element.b }}</td>
-          <td editable="false">{{ element.c }}</td>
-          <td editable="false">
-            {% if element.sessions.all|length > 0%}
-            <i class="fas fa-pencil-alt" onclick="toggleEdit('component-row{{ forloop.counter }}')"></i>
-            <i class="fa-solid fa-floppy-disk" onclick="saveChanges('component-row{{ forloop.counter }}')" class="save-row"></i>
-            <i class="fas fa-times-circle" onclick="cancelChanges('component-row{{ forloop.counter }}')" class="cancel-button"></i>
-            <i class="fa-solid fa-trash" onclick="Delete('{{element.id}}', '{{element.name}}')"></i>
-            {% else %}
-            <i class="fa-sharp fa-solid fa-ban">
-            {% endif %}
-          </td>
+          {% for element in components %}
+          <tr id="component-row{{ forloop.counter }}">
+            <td noneditable="true">{{ element.id }}</td>
+            <td editable="false">{{ element.name }}</td>
+            <td editable="false">{{ element.a }}</td>
+            <td editable="false">{{ element.b }}</td>
+            <td editable="false">{{ element.c }}</td>
+            <td editable="false">
+              {% if element.sessions.all|length > 0%}
+              <i class="fas fa-pencil-alt" onclick="toggleEdit('component-row{{ forloop.counter }}')"></i>
+              <i class="fa-solid fa-floppy-disk" style="display: none;"
+                onclick="saveChanges('component-row{{ forloop.counter }}')" class="save-row"></i>
+              <i class="fas fa-times-circle" style="display: none;"
+                onclick="cancelChanges('component-row{{ forloop.counter }}')" class="cancel-button"></i>
+              <i class="fa-solid fa-trash" onclick="Delete('{{element.id}}', '{{element.name}}')"></i>
+              {% else %}
+              <i class="fa-sharp fa-solid fa-ban">
+                {% endif %}
+            </td>
 
-        </tr>
+          </tr>
 
-        {% endfor %}
-      </tbody>
-    </table>
-  </div>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
 
-  <h2>Binary relations for NRTL model</h2>
+    <h2>Binary relations for NRTL model</h2>
     <div class="table-container">
       <table id="binary-relations-table">
         <thead>
-        <tr>
-          {% for key in relation_keys %}
-          <th>{{key}}</th>
+          <tr>
+            {% for key in relation_keys %}
+            <th>{{key}}</th>
+            {% endfor %}
+            <th>
+              Actions
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for element in relations %}
+          <tr id="relation-row{{ forloop.counter }}">
+            <td noneditable="true">{{ element.id }}</td>
+            <td editable="false">{{ element.component1.name }} (ID : {{element.component1.id}})</td>
+            <td editable="false">{{ element.component2.name }} (ID : {{element.component2.id}})</td>
+            <td editable="false">{{ element.a12 }}</td>
+            <td editable="false">{{ element.a21 }}</td>
+            <td editable="false">{{ element.alpha }}</td>
+
+
+            <td editable="false">
+              {% if element.sessions.all|length > 0%}
+              <i class="fas fa-pencil-alt" onclick="toggleEdit('relation-row{{ forloop.counter }}')"></i>
+              <i class="fas fa-times-circle" onclick="cancelChanges('relation-row{{ forloop.counter }}')"
+                style="display: none;" class="cancel-button"></i>
+              <i class="fa-solid fa-floppy-disk" onclick="saveChanges('relation-row{{ forloop.counter }}')"
+                style="display: none;" class="save-row"></i>
+              <i class="fa-solid fa-trash"
+                onclick="Delete_relation('{{element.id}}', '{{element.component1.name}}', '{{element.component2.name}}')"></i>
+              {% else %}
+              <i class="fa-sharp fa-solid fa-ban">
+                {% endif %}
+            </td>
+
+          </tr>
           {% endfor %}
-          <th>
-            Actions
-          </th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for element in relations %}
-        <tr id="relation-row{{ forloop.counter }}">
-          <td noneditable="true">{{ element.id }}</td>
-          <td editable="false">{{ element.component1.name }} (ID : {{element.component1.id}})</td>
-          <td editable="false">{{ element.component2.name }} (ID : {{element.component2.id}})</td>
-          <td editable="false">{{ element.a12 }}</td>
-          <td editable="false">{{ element.a21 }}</td>
-          <td editable="false">{{ element.alpha }}</td>
+        </tbody>
+      </table>
+    </div>
 
-
-          <td editable="false">
-            {% if element.sessions.all|length > 0%}
-            <i class="fas fa-pencil-alt" onclick="toggleEdit('relation-row{{ forloop.counter }}')"></i>
-            <i class="fas fa-times-circle" onclick="cancelChanges('relation-row{{ forloop.counter }}')" class="cancel-button"></i>
-            <i class="fa-solid fa-floppy-disk" onclick="saveChanges('relation-row{{ forloop.counter }}')" class="save-row"></i>
-            <i class="fa-solid fa-trash"
-              onclick="Delete_relation('{{element.id}}', '{{element.component1.name}}', '{{element.component2.name}}')"></i>
-            {% else %}
-            <i class="fa-sharp fa-solid fa-ban">
-            {% endif %}
-          </td>
-
-        </tr>
-        {% endfor %}
-      </tbody>
-    </table>
-  </div>
-  </html>
+</html>
