--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/tables.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/tables.html
@@ -1,22 +1,17 @@
 {% load static %}
-
-
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Compounds and Binary Relations</title>
   <script type="text/javascript" src="{% static 'js/table.js' %}"></script>
   <link rel="stylesheet" href="{% static 'css/table.css' %}">
-
 </head>
-
 
 <body>
   <div class="container">
     <div class="search-container">
-      <input type="text" id="search" onkeyup="perform_search()" placeholder="&#xF002; Search" class="fontAwesome">
+      <input type="text" id="search" onkeyup="perform_search()" placeholder="&#xF002; Search for compound or relation" class="fontAwesome">
     </div>
     <h2>Compounds for Antoine model</h2>
     <div class="table-container">
@@ -30,30 +25,28 @@
           </tr>
         </thead>
         <tbody>
-        {% for element in components %}
-        <tr id="component-row{{ forloop.counter }}">
-          <td noneditable="true">{{ element.id }}</td>
-          <td editable="false">{{ element.name }}</td>
-          <td editable="false">{{ element.a }}</td>
-          <td editable="false">{{ element.b }}</td>
-          <td editable="false">{{ element.c }}</td>
-          <td editable="false">
-            {% if element.sessions.all|length > 0%}
-            <i class="fas fa-pencil-alt" onclick="toggleEdit('component-row{{ forloop.counter }}')"></i>
-            <i class="fa-solid fa-floppy-disk" onclick="saveChanges('component-row{{ forloop.counter }}')" class="save-row"></i>
-            <i class="fas fa-times-circle" onclick="cancelChanges('component-row{{ forloop.counter }}')" class="cancel-button"></i>
-            <i class="fa-solid fa-trash" onclick="Delete('{{element.id}}', '{{element.name}}')"></i>
-            {% else %}
-            <i class="fa-sharp fa-solid fa-ban">
-            {% endif %}
-          </td>
-
-        </tr>
-
-        {% endfor %}
-      </tbody>
-    </table>
-  </div>
+          {% for element in components %}
+          <tr id="component-row{{ forloop.counter }}">
+            <td noneditable="true">{{ element.id }}</td>
+            <td editable="false">{{ element.name }}</td>
+            <td editable="false">{{ element.a }}</td>
+            <td editable="false">{{ element.b }}</td>
+            <td editable="false">{{ element.c }}</td>
+            <td>
+              {% if element.sessions.all|length > 0%}
+              <i class="fas fa-pencil-alt" onclick="toggleEdit('component-row{{ forloop.counter }}')"></i>
+              <i class="fa-solid fa-floppy-disk" onclick="saveChanges('component-row{{ forloop.counter }}')" class="save-row"></i>
+              <i class="fas fa-times-circle" onclick="cancelChanges('component-row{{ forloop.counter }}')" class="cancel-button"></i>
+              <i class="fa-solid fa-trash" onclick="Delete('{{element.id}}', '{{element.name}}')"></i>
+              {% else %}
+              <i class="fa-sharp fa-solid fa-ban">
+              {% endif %}
+            </td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
 
   <h2>Binary relations for NRTL model</h2>
     <div class="table-container">
@@ -77,9 +70,7 @@
           <td editable="false">{{ element.a12 }}</td>
           <td editable="false">{{ element.a21 }}</td>
           <td editable="false">{{ element.alpha }}</td>
-
-
-          <td editable="false">
+          <td>
             {% if element.sessions.all|length > 0%}
             <i class="fas fa-pencil-alt" onclick="toggleEdit('relation-row{{ forloop.counter }}')"></i>
             <i class="fas fa-times-circle" onclick="cancelChanges('relation-row{{ forloop.counter }}')" class="cancel-button"></i>
