--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
@@ -2,17 +2,9 @@
 Home {%endblock%} {% block head %}
 
 <link rel="stylesheet" href="{% static 'css/index.css' %}" />
-<script
-  type="text/javascript"
-  src="{% static 'js/index.js'%}"
-  charset="utf-8"
-></script>
+<script type="text/javascript" src="{% static 'js/index.js'%}" charset="utf-8"></script>
 <link rel="stylesheet" type="text/css" href="{% static 'css/menu.css' %}" />
-<script
-  type="text/javascript"
-  src="{% static 'js/menu.js' %}"
-  charset="utf-8"
-></script>
+<script type="text/javascript" src="{% static 'js/menu.js' %}" charset="utf-8"></script>
 
 {% endblock %} {% block content %}
 <div class="title-bar">
@@ -30,19 +22,49 @@ Home {%endblock%} {% block head %}
       <span class="value">NRTL</span>
     </div>
 
-    <form
-      action="{% url 'run' %}"
-      method="post"
-      class="container text-center"
-      id="components-selection"
-    >
+    <script type="text/javascript">
+
+      let components = {{ components_json }};
+      let ind = function (x) {
+        let c = components.indexOf(x);
+        return c == -1 ? undefined : c;
+      }
+      let choices = {
+        1: ind({{ c1_selected }}),
+      2: ind({{ c2_selected }}),
+        3: ind({{ c3_selected }})
+      };
+      console.log(choices)
+
+      function updateChoices(selectId, index) {
+        let lastChoice = choices[selectId];
+        console.log(selectId, index, lastChoice);
+        for (let i = 1; i <= 3; i++) {
+          if (i == selectId) {
+            continue;
+          }
+
+          let select = document.getElementById("select-component" + i);
+          let options = select.getElementsByTagName("option");
+          if (lastChoice >= 0) options[lastChoice].hidden = false;
+          options[index].hidden = true;
+        }
+
+        choices[selectId] = index;
+      }
+    </script>
+
+    <form action="{% url 'run' %}" method="post" class="container text-center" id="components-selection">
       {% csrf_token %}
       <div id="componenetsSelection">
         <div class="component">
           <label>Compound 1</label>
-          <select name="component1" class="form-select">
+          <select id="select-component1" name="component1" class="form-select"
+            onchange="updateChoices(1, this.selectedIndex);">
             {% for component in components %} {%if component.id == c1_selected%}
             <option value="{{ component.id }}" selected>{{ component }}</option>
+            {% elif component.id == c2_selected or component.id == c3_selected %}
+            <option value="{{ component.id }}" hidden>{{ component }}</option>
             {% else %}
             <option value="{{ component.id }}">{{ component }}</option>
             {% endif %} {% empty %}
@@ -53,9 +75,12 @@ Home {%endblock%} {% block head %}
 
         <div class="component">
           <label>Compound 2</label>
-          <select name="component2" class="form-select">
+          <select id="select-component2" name="component2" class="form-select"
+            onchange="updateChoices(2, this.selectedIndex);">
             {% for component in components %} {%if component.id == c2_selected%}
             <option value="{{ component.id }}" selected>{{ component }}</option>
+            {% elif component.id == c1_selected or component.id == c3_selected %}
+            <option value="{{ component.id }}" hidden>{{ component }}</option>
             {% else %}
             <option value="{{ component.id }}">{{ component }}</option>
             {% endif %} {% empty %}
@@ -66,9 +91,12 @@ Home {%endblock%} {% block head %}
 
         <div class="component">
           <label>Compound 3</label>
-          <select name="component3" class="form-select">
+          <select id="select-component3" name="component3" class="form-select"
+            onchange="updateChoices(3, this.selectedIndex);">
             {% for component in components %} {%if component.id == c3_selected%}
             <option value="{{ component.id }}" selected>{{ component }}</option>
+            {% elif component.id == c2_selected or component.id == c1_selected %}
+            <option value="{{ component.id }}" hidden>{{ component }}</option>
             {% else %}
             <option value="{{ component.id }}">{{ component }}</option>
             {% endif %} {% empty %}
@@ -83,84 +111,29 @@ Home {%endblock%} {% block head %}
       </div>
 
       <div class="radio-group" style="margin-bottom: 20px">
-        <input
-          type="radio"
-          name="option"
-          id="option1"
-          value="Rectangle"
-          checked
-        />
+        <input type="radio" name="option" id="option1" value="Rectangle" checked />
         <label for="option1">Rectangle</label>
 
         <input type="radio" name="option" id="option2" value="Equilateral" />
         <label for="option2">Equilateral</label>
       </div>
 
-      <input
-        id="submit-btn"
-        type="submit"
-        value="Run"
-        class="btn btn-primary"
-      />
-      <input
-        id="add-compound-btn"
-        type="button"
-        value="Add new compound"
-        class="btn btn-primary"
-      />
+      <input id="submit-btn" type="submit" value="Run" class="btn btn-primary" />
+      <input id="add-compound-btn" type="button" value="Add new compound" class="btn btn-primary" />
 
-      <input
-        id="add-relation-btn"
-        type="button"
-        value="Add new binary relation"
-        class="btn btn-primary"
-      />
+      <input id="add-relation-btn" type="button" value="Add new binary relation" class="btn btn-primary" />
     </form>
 
     <div class="d-flex justify-content-center">
       <div id="compound-form-container" style="display: none">
-        <i
-          class="fa-sharp fa-regular fa-circle-xmark fa-xl"
-          id="close-compound"
-        ></i>
-        <form
-          id="compound-form"
-          action="{% url 'add_component' %}"
-          method="post"
-        >
+        <i class="fa-sharp fa-regular fa-circle-xmark fa-xl" id="close-compound"></i>
+        <form id="compound-form" action="{% url 'add_component' %}" method="post">
           {% csrf_token %}
-          <input
-            type="text"
-            id="name-input"
-            placeholder="Compound Name"
-            name="name"
-            required
-          />
+          <input type="text" id="name-input" placeholder="Compound Name" name="name" required />
 
-          <input
-            type="number"
-            step="any"
-            id="a-input"
-            name="a"
-            placeholder="A"
-            required
-          />
-          <input
-            type="number"
-            step="any"
-            id="b-input"
-            name="b"
-            placeholder="B"
-            required
-          />
-          <input
-            type="number"
-            step="any"
-            id="c-input"
-            name="c"
-            placeholder="C"
-            required
-          />
+          <input type="number" step="any" id="a-input" name="a" placeholder="A" required />
+          <input type="number" step="any" id="b-input" name="b" placeholder="B" required />
+          <input type="number" step="any" id="c-input" name="c" placeholder="C" required />
           <input type="submit" value="Save" class="btn btn-primary" />
           <i class="fa-solid fa-circle-info fa-2xl" id="tooltip-antoine"></i>
         </form>
@@ -169,15 +142,8 @@ Home {%endblock%} {% block head %}
 
     <div class="d-flex justify-content-center">
       <div id="relation-form-container" style="display: none">
-        <i
-          class="fa-sharp fa-regular fa-circle-xmark fa-xl"
-          id="close-relation"
-        ></i>
-        <form
-          id="relation-form"
-          action="{% url 'add_relation' %}"
-          method="post"
-        >
+        <i class="fa-sharp fa-regular fa-circle-xmark fa-xl" id="close-relation"></i>
+        <form id="relation-form" action="{% url 'add_relation' %}" method="post">
           {% csrf_token %}
           <select name="component1" class="form-select" required>
             {% for component in components %}
@@ -191,27 +157,9 @@ Home {%endblock%} {% block head %}
             {% endfor %}
           </select>
 
-          <input
-            type="number"
-            step="any"
-            name="a12"
-            placeholder="A12"
-            required
-          />
-          <input
-            type="number"
-            step="any"
-            name="a21"
-            placeholder="A21"
-            required
-          />
-          <input
-            type="number"
-            step="any"
-            name="alpha"
-            placeholder="Alpha"
-            required
-          />
+          <input type="number" step="any" name="a12" placeholder="A12" required />
+          <input type="number" step="any" name="a21" placeholder="A21" required />
+          <input type="number" step="any" name="alpha" placeholder="Alpha" required />
           <input type="submit" value="Save" class="btn btn-primary" />
           <i class="fa-solid fa-circle-info fa-2xl" id="tooltip-nrtl"></i>
         </form>
@@ -231,12 +179,7 @@ Home {%endblock%} {% block head %}
     </div>
 
     {% if not curves %}
-    <div
-      id="spinner"
-      class="spinner-border text-primary"
-      role="status"
-      style="display: none"
-    ></div>
+    <div id="spinner" class="spinner-border text-primary" role="status" style="display: none"></div>
     {% endif %}
   </div>
 
