--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
@@ -169,7 +169,7 @@ Home {%endblock%} {% block head %}
     <div class="tooltip-container" style="display: none" id="nrtl">
       PS: A is propotional to tau :
       <br />
-      <img src="{% static 'img/nrtl_equation.png' %}" />
+      <img src="{% static 'img/nrtl_equation_2.png' %}" />
     </div>
 
     <div class="tooltip-container" style="display: none" id="antoine">
