--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
@@ -42,41 +42,53 @@ Home {%endblock%} {% block head %}
 
       for (let i = 0; i < relations.length; i++) {
         relationMap[relations[i][0]].push(relations[i][1]);
-        relationMap[relations[i][1]].push(relations[i][0]);
+        //relationMap[relations[i][1]].push(relations[i][0]);
       }
 
       console.log("relationMap", relationMap);
 
       function getRelatedComponents(selectId) {
-        let result = [];
-        for (let i = 1; i <= 3; i++) {
-          if (choices[i] == undefined) {
-            continue;
-          }
-          let componentId = components[choices[i]];
-          result = result.concat(relationMap[componentId]);
+        switch (selectId) {
+          case 1:
+            return components;
+          case 2:
+            let componentId = components[choices[1]];
+            return relationMap[componentId];
+          case 3:
+            let componentId1 = components[choices[1]];
+            let componentId2 = components[choices[2]];
+            return relationMap[componentId1].filter(cId => relationMap[componentId2].includes(cId));
         }
-
-        return result == [] ? components : result;
+        return [];
       }
 
       function updateChoices(selectId, index) {
         let lastChoice = choices[selectId];
         choices[selectId] = index;
-        let related = getRelatedComponents(selectId);
-        let choicesValues = Object.values(choices);
+        if (selectId == 3) {
+          return;
+        }
 
+        let related = getRelatedComponents(selectId + 1);
+
+        let select = document.getElementById("select-component" + (selectId + 1));
+        let options = select.getElementsByTagName("option");
+
+        for (let j = 0; j < components.length; j++) {
+          options[j].hidden = related.indexOf(components[j]) == -1;
+        }
+
+        for (let j = selectId + 1; j <= 3; j++) {
+          document.getElementById("select-component" + j).selectedIndex = -1;
+          choices[j] = undefined;
+        }
+      }
+
+      window.onload = function () {
+        console.log("Load");
         for (let i = 1; i <= 3; i++) {
-          if (i == selectId) {
-            continue;
-          }
-
           let select = document.getElementById("select-component" + i);
-          let options = select.getElementsByTagName("option");
-
-          for (let j = 0; j < components.length; j++) {
-            options[j].hidden = related.indexOf(components[j]) == -1 || choicesValues.indexOf(j) >= 0;
-          }
+          select.selectedIndex = choices[i] == undefined ? -1 : choices[i];
         }
       }
     </script>
