--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/layout.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/layout.html
@@ -31,6 +31,6 @@
   </head>
   <body>
     {%block content %} {% endblock %}
-    <footer>&copy; 2023 ENSEEIHT. All Rights Reserved</footer>
+    <footer>Copyright &copy; 2023 ENSEEIHT. All Rights Reserved</footer>
   </body>
 </html>
