--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
@@ -95,7 +95,7 @@ Home {%endblock%} {% block head %}
 <div id="index-content">
   <div id="main">
     <div class="model">
-      <label>Pessure-Temperature equation</label>
+      <label>Pressure-Temperature equation</label>
       <span class="value">ANTOINE</span>
       <label>Thermodynamic model</label>
       <span class="value">NRTL</span>
