--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/chart.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/chart.html
@@ -18,7 +18,7 @@
 
 <script>
   function enable_download(chart) {
-    const downloadBtn = document.getElementById("downlaod-diagram");
+    const downloadBtn = document.getElementById("download-diagram");
     console.log(downloadBtn);
     downloadBtn.addEventListener("click", () => {
       let img_uri = chart.toBase64Image();
